test/tests/stages/18_structures/invalid_types/extra_credit/union_initializers/static_union_init_wrong_type.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[29]:
  union
  identifier(u)
  {
  signed
  char
  *
  identifier(ptr)
  ;
  double
  identifier(d)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  static
  union
  identifier(u)
  identifier(my_union)
  =
  {
  string literal("A char array")
  }
  ;
  }
